# Example folders
SET(APPS_DIRS
	.
)

# Compiling applications
FOREACH(DIR ${APPS_DIRS} )
	FILE( GLOB SOURCES ./${DIR}/*.cpp )
	SET( SOURCE_PATH ${DIR} )
	STRING( REPLACE "/" "_" DIR "${DIR}" )
	STRING( REPLACE "._" "" DIR "${DIR}" )
	FOREACH( SRC ${SOURCES} )
		GET_FILENAME_COMPONENT( EXEC_NAME ${SRC} NAME_WE )
		SET( CURR_EXE ${EXEC_NAME} )
		ADD_EXECUTABLE( ${CURR_EXE} ${SRC} )
		TARGET_LINK_LIBRARIES(
			${CURR_EXE}
			LinkPred
		)
	ENDFOREACH( SRC ${SOURCES} )
ENDFOREACH( DIR ${APPS_DIRS} )

